# AGI-o1

./: .env.example  .gitignore  AGI-o1.py  CODEX_SETUP.md  UI.py  app.py  chat_history.py  config.py  constants.py  file_tools.py  fluid_reasoning.py  inspo4mem.md  notes.py  pyproject.toml  readme.md  reasoning_bank.py  requirements.txt  scoring.py  test.py  tools.py  utils.py  workspace_manager.py
docs/: paper.txt  reasoning_bank.json
examples/: fluid_intelligence_demo.py  pygame_catch_game.py
scripts/: dual_commit.py
src/amarillo/: __init__.py  main.py
src/amarillo/arc/: __init__.py  codex_solver.py  competition.py  dataset.py  evaluator.py  grid.py  icl_adapter.py  refinement.py  solver.py
src/amarillo/arc/dsl/: __init__.py  language.py  primitives.py  search.py
src/amarillo/arc/synthesis/: __init__.py  augmentation.py  generator.py
src/amarillo/arc/ttt/: __init__.py  adapter.py  trainer.py
src/amarillo/core/: __init__.py  config.py  utils.py
src/amarillo/memory/: __init__.py  chat_history.py  notes.py  workspace_manager.py
src/amarillo/reasoning/: __init__.py  ensemble_reasoning.py
src/amarillo/tools/: __init__.py  tools.py
tests/: conftest.py  test_reasoning_bank.py  test_task_session.py
